# dogbox

./: CMakeLists.txt  README.md  format.sh  install_dependencies.bat  install_dependencies.sh  vcpkg_dependencies
benchmarks/: CMakeLists.txt  benchmarks.cpp  fuse_adaptor_benchmarks.cpp
blob_layer/: CMakeLists.txt  blob_storage.cpp  blob_storage.h  hash_code.h
common/: create_random_directory.h  create_random_file.h  create_randomness.h  file_descriptor.h  to_do.h
fuse_adaptor/: CMakeLists.txt  adaptor.cpp  adaptor.h  fuse_adaptor.cpp  fuse_adaptor.h  open_file.h  operations.cpp  operations.h  resolve_path.cpp  resolve_path.h  split_path.cpp  unmount.cpp  user_data.h
fuse_adaptor_shared/: CMakeLists.txt  channel.h  deleter.h  resolve_path.h  split_path.h  unmount.h
fuse_read_only_adaptor/: CMakeLists.txt  adaptor.cpp  adaptor.h  operations.cpp  operations.h  user_data.h
fuse_write_adaptor/: CMakeLists.txt  adaptor.cpp  adaptor.h  operations.cpp  operations.h  user_data.h
in_memory_fuse_frontend/: main.cpp
in_memory_fuse_frontend_shared/: directory.cpp  directory.h
tests/: CMakeLists.txt  fuse_adaptor_test.cpp  fuse_read_only_adaptor_test.cpp  fuse_write_adaptor_test.cpp  import_test.cpp  read_file_test.cpp  scan_directory_test.cpp  trees_directory_test.cpp  trees_regular_file_test.cpp
trees/: directory.cpp  directory.h  import.cpp  import.h  open_file.h  read_file.cpp  read_file.h  regular_file.cpp  regular_file.h  regular_file_index.cpp  regular_file_index.h
